@@ -59,7 +59,7 @@ im_vips2dz( IMAGE *in, const char *filename )
 	char *suffix = ".jpeg";
 	int overlap = 0;
 	int tile_size = 256;
-	VipsForeignDzDepth depth = VIPS_FOREIGN_DZ_DEPTH_1PIXEL; 
+	VipsForeignDzDepth depth = VIPS_FOREIGN_DZ_DEPTH_ONEPIXEL; 
 	gboolean centre = FALSE;
 	VipsAngle angle = VIPS_ANGLE_D0; 
 
